Ajustando os filmes

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   min-height: 100vh;
-  background-image: url("https://twistedsifter.com/wp-content/uploads/2023/10/Marvel-Movies-TV-Shows-Chronological-Order.png");
+  background-image: url("../img/Banner.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
